feat: Add Dockerfile for Python 3.9-slim image with necessary configurations and dependencies

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,7 +51,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ../Dockerfile
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/django_inventory_system:${{ github.event.pull_request.head.ref }}
 
